# Azure-Lakehouse-Pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: azure.yaml  base.yaml  local.yaml
schema/: dwhSchema.sql  oltpSchema.sql
scripts/: phase1_local_runbook.sh
src/ecommerce_pipeline/: __init__.py  config.py  delta.py  filesystem.py  io.py  logging.py  metrics.py  preflight.py  secrets.py  spark.py  watermark.py
src/ecommerce_pipeline/cdc/: __init__.py  event_parser.py  ledger.py  merge_handler.py  register_connector.py  schema_registry.py
src/ecommerce_pipeline/jobs/: __init__.py  bronze.py  bronze_stream.py  gold.py  gold_incremental.py  gold_stream.py  gold_transforms.py  inspect.py  run_batch.py  run_streaming.py  silver.py  silver_stream.py  validate.py
src/ecommerce_pipeline/orchestration/: __init__.py  prefect_flow.py
src/ecommerce_pipeline/seed/: __init__.py  init_source.py  synthetic_data.py
tests/: conftest.py
tests/e2e/: test_cdc_lifecycle.py
tests/integration/: test_delta_scd2.py  test_local_lakehouse.py
tests/unit/: test_bronze.py  test_bronze_stream.py  test_cdc_connector.py  test_config.py  test_delta.py  test_event_parser.py  test_filesystem.py  test_gold.py  test_gold_incremental.py  test_gold_job.py  test_gold_stream.py  test_gold_transforms.py  test_io.py  test_ledger.py  test_logging.py  test_merge_handler.py  test_metrics.py  test_runners.py  test_schema_registry.py  test_secrets.py  test_silver.py  test_silver_stream.py  test_spark.py  test_validate.py  test_watermark.py
