[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-pipeline"
version = "0.3.0"
description = "Local-first, cloud-ready ecommerce medallion data pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "delta-spark>=3.2,<4.0",
    "pyspark>=3.5,<4.0",
    "PyYAML>=6.0,<7.0",
    "psycopg[binary]>=3.1,<4.0",
    "fsspec>=2024.6.0",
]

[project.optional-dependencies]
azure = [
    "adlfs>=2024.7.0",
    "azure-identity>=1.17.0",
    "azure-keyvault-secrets>=4.8.0",
]
dev = [
    "black>=24.4.0",
    "coverage>=7.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
orchestration = [
    "prefect>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker/PostgreSQL or existing lakehouse data",
    "e2e: opt-in full Docker CDC lifecycle tests",
]
addopts = "--cov=ecommerce_pipeline --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["src/ecommerce_pipeline"]
omit = [
    "src/ecommerce_pipeline/seed/*",
    "src/ecommerce_pipeline/orchestration/*",
    "src/ecommerce_pipeline/preflight.py",
    "src/ecommerce_pipeline/cdc/register_connector.py",
    "src/ecommerce_pipeline/jobs/inspect.py",
    "src/ecommerce_pipeline/secrets.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == '__main__':",
    "pragma: no cover",
]
